@@ -9,6 +9,7 @@ WinMerge 2.12.0
   Bugfix: Crash in editor when undoing (#2590212)
   Bugfix: Browse button in Option dialog reverted to previous settings
     (#2606153)
+  Bugfix: Files without extension get backed up to name..bak (#2627752)
   Translation updates:
   - Chinese Traditional (#2608190)
   - Croatian (#2596949)
